@@ -12,8 +12,8 @@ const STEP_NONE = 0;
 const STEP_WELCOME = 1;
 const STEP_CHECK_DEPENDENCIES = 2;
 const STEP_INSTALL_TYPE = 3;
-const STEP_BINARY_LOCATIONS = 4;
-const STEP_PERMISSION_CHECK = 5;
+const STEP_PERMISSION_CHECK = 4;
+const STEP_BINARY_LOCATIONS = 5;
 const STEP_DEFAULT_PROFILE = 6;
 const STEP_TEMPLATE_INSTALL = 7;
 const STEP_CHECK_TABLES = 8;
